<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".views.ContactosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/button_settings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_marginTop="28dp"
            android:background="@color/white"
            android:gravity="center"
            android:src="@drawable/icon_settings" />

        <ImageView
            android:id="@+id/button_messages"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_marginTop="28dp"
            android:background="@color/white"
            android:gravity="center"
            android:src="@drawable/icon_chat" />

        <ImageView
            android:id="@+id/button_menu_geral"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_marginTop="28dp"
            android:background="@color/white"
            android:gravity="center"
            android:src="@drawable/icon_buttton_menugeral" />

        <ImageView
            android:id="@+id/button_badges"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_marginTop="28dp"
            android:background="@color/white"
            android:gravity="center"
            android:src="@drawable/icon_badges" />

        <ImageView
            android:id="@+id/button_login_perfil"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_marginTop="28dp"
            android:background="@color/white"
            android:gravity="center"
            android:src="@drawable/icon_user" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:fontFamily="@font/susan_bold"
        android:text="Contactos"
        android:textAlignment="center"
        android:textColor="@color/mainblue"
        android:textSize="24dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:fontFamily="@font/susan_book"
        android:text="WORLD SKILLS PORTUGAL"
        android:textAlignment="center"
        android:textColor="@color/mainblue"
        android:textSize="14dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:fontFamily="@font/susan_book"
        android:text="IEFP, I.P. Departamento de Formação Profissional"
        android:textAlignment="center"
        android:textColor="@color/mainblue"
        android:textSize="14dp" />

    <ImageView
        android:id="@+id/icon_morada"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:background="@drawable/contact_icons"
        android:src="@drawable/icon_morada"
        app:srcCompat="@drawable/icon_morada" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:fontFamily="@font/susan_book"
        android:text="@string/morada1"
        android:textAlignment="center"
        android:textColor="@color/mainblue"
        android:textSize="14dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:fontFamily="@font/susan_book"
        android:text="@string/morada2"
        android:textAlignment="center"
        android:textColor="@color/mainblue"
        android:textSize="14dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:fontFamily="@font/susan_book"
        android:text="@string/morada3"
        android:textAlignment="center"
        android:textColor="@color/mainblue"
        android:textSize="14dp" />

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:background="@drawable/contact_icons"
        android:src="@drawable/icon_telefone_foreground" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:fontFamily="@font/susan_book"
        android:text="(+351) 215 803 000"
        android:textAlignment="center"
        android:textColor="@color/mainblue"
        android:textSize="14dp" />

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:background="@drawable/contact_icons"
        android:src="@drawable/icon_email_foreground" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:autoLink="web"
        android:background="@drawable/email_box"
        android:fontFamily="@font/susan_book"
        android:padding="8dp"
        android:text="@string/email_info"
        android:textAlignment="center"
        android:textColor="@color/mainblue"
        android:textColorHighlight="@color/mainblue"
        android:textColorLink="@color/mainblue"
        android:textSize="14dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/email_box"
        android:fontFamily="@font/susan_book"
        android:padding="8dp"
        android:text="@string/email_secretariado"
        android:textAlignment="center"
        android:textColor="@color/mainblue"
        android:textColorHighlight="@color/mainblue"
        android:textColorLink="@color/mainblue"
        android:textSize="14dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/email_box"
        android:fontFamily="@font/susan_book"
        android:padding="8dp"
        android:text="@string/email_suporte"
        android:textAlignment="center"
        android:textColor="@color/mainblue"
        android:textColorHighlight="@color/mainblue"
        android:textColorLink="@color/mainblue"
        android:textSize="14dp" />


</LinearLayout>
